Criando o encerramento da sessão part 2

--- a/WebContent/publico/invalidateSession.xhtml
+++ b/WebContent/publico/invalidateSession.xhtml
@@ -42,20 +42,19 @@
 		<p:dialog header="Encerrar Sessão" widgetVar="dlg" resizable="false" modal="true" closable="false">
 			<h:panelGrid columns="2" cellpadding="5">
 				<h:outputLabel value="Login:" for="username"/>
-				<p:inputText id="username" required="true" label="username" requiredMessage="Informe o login." />
+				<p:inputText id="username" required="true" label="username" requiredMessage="Informe o login." value="#{loginBeanView.username}"/>
 				<h:outputLabel value="Senha:" for="password" />
-				<p:password id="password" required="true" requiredMessage="Informe a senha." label="password"/>
+				<p:password id="password" required="true" requiredMessage="Informe a senha." label="password"  value="#{loginBeanView.password}"/>
 				
 				<f:facet name="footer">
 					<p:commandButton value="Encerrar" 
-					actionListener=""
+					actionListener="#{loginBeanView.invalidar}"
 					style="height:40px; width:100px; background:#CDCDC1; border:1px solid #FFFFF;"
 					update="form:msg" ajax="true" oncomplete="handleLoginRequest(xhr, status, args)" />
 				</f:facet>
 				
 			</h:panelGrid>
 		</p:dialog>
-	
 	</h:body>
 	<script>
 	$(function() {
@@ -63,17 +62,13 @@
 	});
 	
 	function handleLoginRequest(xhr, status, args) {
-		alert(args);
 		if (!args.loggedIn) {
 			PF('dlg').jq.effect("shake"), {times:5} , 100;
 		} else {
 			PF('dlg').hide();
-			logout('#{request.contextPath}');
+			document.location = '#{request.contextPath}' + "/j_spring_security_logout"
 		}
-		
-		
 	}
-		
 	</script>
 	</h:form>
 </html>
