--- a/WebContent/restrito/principal.xhtml
+++ b/WebContent/restrito/principal.xhtml
@@ -10,7 +10,12 @@
 <h:head>
 
 </h:head>
+<h:form>
 <h:body>
+	<ui:include src="/templates/barraProgresso.xhtml" />
 	<h1>Principal</h1>
+	
+	<p:commandButton  value="Testa status" ajax="true"/>
 </h:body>
+</h:form>
 </html>
