--- a/WebContent/publico/invalidateSession.xhtml
+++ b/WebContent/publico/invalidateSession.xhtml
@@ -31,7 +31,7 @@
 
 	<h:form prependId="false" id="form">
 		<script type="text/javascript" charset="UTF-8">
-			$.noConflit(); /*Evita conflito entre as bibliotecas*/
+			$.noConflict(); /*Evita conflito entre as bibliotecas*/
 		</script>
 		
 	<h:body>
