Finalizando o template inicial, menu do sistema, sair do sistema v: 60-63

--- a/WebContent/restrito/principal.xhtml
+++ b/WebContent/restrito/principal.xhtml
@@ -8,7 +8,9 @@
 	  xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="/templates/templatePrincipal.xhtml">
-
+	<ui:define name="corpo">
+		<!-- Corpo das paginas web -->
+	</ui:define>
 </ui:composition>
 
 </html>
