Paginando na tela com datatable v:71

--- a/WebContent/cadastro/cad_cidade.xhtml
+++ b/WebContent/cadastro/cad_cidade.xhtml
@@ -36,7 +36,7 @@
 				<div class="espacoBranco"/>
 				
 				<p:commandButton value="Salvar" ajax="false" action="#{cidadeBeanView.save}"/>
-				<p:commandButton value="Novo" ajax="false" action="#{cidadeBeanView.novo}"/>
+				<p:commandButton value="Novo" ajax="false" action="#{cidadeBeanView.novo}" immediate="true"/>
 			</h:form>
 			
 			<script type="text/javascript" charset="UTF-8">
@@ -47,7 +47,9 @@
 			<div class="espacoBranco"/>
 			
 			<p:dataTable id="tableResult" value="#{cidadeBeanView.cidades}" var="cidade"
-			 emptyMessage="Não existem valores para exibição.">
+			 emptyMessage="Não existem valores para exibição." rendered="true" rows="5"
+			  paginator="true" paginatorPosition="bottom"
+			  paginatorTemplate="{FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}">
 				<p:column>
 					<center>
 						<f:facet name="header">Código</f:facet>
